[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ChainForgeLedger"
version = "1.0.0"
authors = [
  { name="Kanishk Kumar Singh", email="kanishkkumar2004@gmail.com" }
]
description = "A complete blockchain platform library with PoW/PoS consensus, smart contracts, and DeFi applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Security :: Cryptography",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=5.0",
    "black>=23.0",
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
]

[project.urls]
"Repository" = "https://github.com/kanishkkumarsingh2004/ChainForgeLedger.git"

[project.scripts]
chainforgeledger = "chainforgeledger.__main__:main"
